--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     />
-    <link rel="icon" href="/assets/god of war title.png">
+    <link rel="icon" href="./assets/god of war title.png">
     <title>God Of War - Homepage</title>
   </head>
   <body>
