--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="God Of War HomePage">
     <meta name="author" content="Ahmed Usama">
-    <link rel="stylesheet" href="./css/game.css" />
+    <link rel="stylesheet" href="./css/game.css" type="text/css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
