--- a/public/ar/arabic.html
+++ b/public/ar/arabic.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="God Of War HomePage">
-    <meta name="author" content="Ahmed Usama">
-    <link rel="stylesheet" href="./css/game.css" type="text/css" />
+    <meta name="description" content="جود اوف وار - الصفحة الرئيسية">
+    <meta name="author" content="احمد اسامة">
+    <link rel="stylesheet" href="../css/arabic.css" type="text/css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     />
-    <link rel="icon" href="assets/god of war title.png">
-    <title>God Of War - Homepage</title>
+    <link rel="icon" href="../assets/god of war title.png">
+    <title>جود اوف وار- الصفحة الرئيسية</title>
   </head>
   <body>
     <div class="preloader" id="loader">
-      <div class="god-of-war">God Of War</div>
+      <div class="god-of-war">جود اوف وار</div>
     </div>
     <!-- Start Navbar -->
     <div class="navbar" id="navbar"></div>
@@ -26,7 +26,7 @@
       <!-- Start Header -->
       <header>
         <main>
-          <h1>God Of War</h1>
+          <h1>جود اوف وار</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt a
             adipisci iure possimus fugit est. Vel officia repellat tempore
@@ -34,8 +34,8 @@
             Nam, cum ex!
           </p>
           <div class="buttons">
-            <a href="#">Demo</a>
-            <a href="#">Purchase</a>
+            <a href="#">تجريبى</a>
+            <a href="#">شراء</a>
           </div>
         </main>
       </header>
@@ -45,7 +45,7 @@
         <div class="container">
           <article class="box">
             <i class="fa fa-wifi"></i>
-            <h2>Blog</h2>
+            <h2>المقال</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Consequatur sapiente necessitatibus autem corrupti!
@@ -53,7 +53,7 @@
           </article>
           <article class="box">
             <i class="fa-solid fa-cart-shopping"></i>
-            <h2>Store</h2>
+            <h2>المتجر</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Consequatur sapiente necessitatibus autem corrupti!
@@ -61,35 +61,35 @@
           </article>
           <article class="box">
             <i class="fa fa-users"></i>
-            <h2>Social Network</h2>
+            <h2>شبكة التواصل الاجتماعى</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Consequatur sapiente necessitatibus autem corrupti!
             </p>
           </article>
         </div>
-        <h3>god of war comes with challenges</h3>
+        <h3>جود اوف وار تاتى مع تحديات</h3>
         <div class="games">
           <div class="img-box">
-            <img src="assets/games1.webp" alt="god of war" />
+            <img src="../assets/games1.webp" alt="جود اوف وار" />
           </div>
           <div class="img-box">
-            <img src="assets/games2.webp" alt="god of war" />
+            <img src="../assets/games2.webp" alt="جود اوف وار" />
           </div>
           <div class="img-box">
-            <img src="assets/games3.webp" alt="god of war" />
+            <img src="../assets/games3.webp" alt="جود اوف وار" />
           </div>
           <div class="img-box">
-            <img src="assets/games4.webp" alt="god of war" />
+            <img src="../assets/games4.webp" alt="جود اوف وار" />
           </div>
         </div>
         <!-- Start Features -->
         <div class="features">
-          <div class="feature-head">A bit more features</div>
+          <div class="feature-head">مميزات اكثر</div>
           <div class="container">
             <article class="feature-box">
               <i class="fa-solid fa-triangle-exclamation"></i>
-              <h3>Clan Wars</h3>
+              <h3>حروب العشيرة</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde,
                 magnam.
@@ -97,7 +97,7 @@
             </article>
             <article class="feature-box">
               <i class="fa-solid fa-clock"></i>
-              <h3>Coming Soon</h3>
+              <h3>قريباً</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde,
                 magnam.
@@ -105,7 +105,7 @@
             </article>
             <article class="feature-box">
               <i class="fa-solid fa-paper-plane"></i>
-              <h3>Ajax Contact Form</h3>
+              <h3>نموذج الاتصال</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde,
                 magnam.
@@ -115,7 +115,7 @@
           <!-- Start Questions -->
           <div class="questions">
             <div class="wrapper">
-              <h3>Have Any Questions?</h3>
+              <h3>هل لديك اى سؤال ؟</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Voluptate laborum sunt vel ut, ipsum eligendi aperiam fuga quis
@@ -130,38 +130,38 @@
         <!-- Start Price -->
         <div class="price">
           <div class="wrapper">
-            <h2>Purchase today for 50$</h2>
-            <a href="#">Purchase</a>
+            <h2>اشترى اليوم مقابل 50 دولار</h2>
+            <a href="#">شراء</a>
           </div>
         </div>
         <!-- End Price -->
         <!-- Start Social -->
         <div class="social">
-          <div class="connect">Connect with us</div>
+          <div class="connect">تواصل معنا</div>
           <div class="wrapper">
             <div class="box">
               <a href="#">
                 <i class="fa-brands fa-discord"></i>
               </a>
-              <span>Subscribe to Discord</span>
+              <span>اشترك فى الديسكورد</span>
             </div>
             <div class="box">
               <a href="#">
                 <i class="fa-brands fa-twitch"></i>
               </a>
-              <span>Watch on Twitch</span>
+              <span>شاهد على تويتش</span>
             </div>
             <div class="box">
               <a href="#">
                 <i class="fa-brands fa-youtube"></i>
               </a>
-              <span>Watch on Youtube</span>
+              <span>شاهد على اليوتيوب</span>
             </div>
             <div class="box">
               <a href="#">
                 <i class="fa-brands fa-square-twitter"></i>
               </a>
-              <span>Follow on Twitter</span>
+              <span>تابعنا على تويتر</span>
             </div>
           </div>
         </div>
@@ -169,6 +169,6 @@
       </section>
       <!-- End Demo -->
     </div>
-    <script src="./js/game.js"></script>
+    <script src="../js/arabic.js"></script>
   </body>
 </html>
