--- a/public/ar/arabic.html
+++ b/public/ar/arabic.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="جود اوف وار - الصفحة الرئيسية">
     <meta name="author" content="احمد اسامة">
-    <link rel="stylesheet" href="../css/arabic.css" type="text/css" />
+    <base href="/public/">
+    <link rel="stylesheet" href="css/arabic.css" type="text/css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     />
-    <link rel="icon" href="../assets/god of war title.png">
+    <link rel="icon" href="assets/god of war title.png">
     <title>جود اوف وار- الصفحة الرئيسية</title>
   </head>
   <body>
@@ -71,16 +72,16 @@
         <h3>جود اوف وار تاتى مع تحديات</h3>
         <div class="games">
           <div class="img-box">
-            <img src="../assets/games1.webp" alt="جود اوف وار" />
+            <img src="assets/games1.webp" alt="جود اوف وار" />
           </div>
           <div class="img-box">
-            <img src="../assets/games2.webp" alt="جود اوف وار" />
+            <img src="assets/games2.webp" alt="جود اوف وار" />
           </div>
           <div class="img-box">
-            <img src="../assets/games3.webp" alt="جود اوف وار" />
+            <img src="assets/games3.webp" alt="جود اوف وار" />
           </div>
           <div class="img-box">
-            <img src="../assets/games4.webp" alt="جود اوف وار" />
+            <img src="assets/games4.webp" alt="جود اوف وار" />
           </div>
         </div>
         <!-- Start Features -->
@@ -169,6 +170,6 @@
       </section>
       <!-- End Demo -->
     </div>
-    <script src="../js/arabic.js"></script>
+    <script src="js/arabic.js"></script>
   </body>
 </html>
