--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="God Of War HomePage">
     <meta name="author" content="Ahmed Usama">
-    <link rel="stylesheet" href="./css/game.css" type="text/css" />
+    <base href="/public/">
+    <link rel="stylesheet" href="css/game.css" type="text/css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
@@ -169,6 +170,6 @@
       </section>
       <!-- End Demo -->
     </div>
-    <script src="./js/game.js"></script>
+    <script src="js/game.js"></script>
   </body>
 </html>
