--- a/public/ar/arabic.html
+++ b/public/ar/arabic.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="جود اوف وار - الصفحة الرئيسية">
     <meta name="author" content="احمد اسامة">
+    <base href="/public/">
     <link rel="stylesheet" href="css/arabic.css" type="text/css" />
     <link
       rel="stylesheet"
