--- a/public/ar/arabic.html
+++ b/public/ar/arabic.html
@@ -7,6 +7,7 @@
     <meta name="description" content="جود اوف وار - الصفحة الرئيسية">
     <meta name="author" content="احمد اسامة">
     <link rel="stylesheet" href="../css/arabic.css" type="text/css" />
+    <link rel="stylesheet" href="../css/game.css" type="text/css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
@@ -169,6 +170,6 @@
       </section>
       <!-- End Demo -->
     </div>
-    <script src="../js/arabic.js"></script>
+    <script src="../js/arabic.js" type="module"></script>
   </body>
 </html>
