--- a/public/index.html
+++ b/public/index.html
@@ -169,6 +169,6 @@
       </section>
       <!-- End Demo -->
     </div>
-    <script src="js/game.js"></script>
+    <script src="js/game.js" type="module"></script>
   </body>
 </html>
